--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,11 +62,13 @@ jobs:
       - run:
           name: kube config
           command: |
-            apk add curl
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
+            apk add curl ca-certificates
             mkdir ~/.kube
             terraform output kubeconfig>~/.kube/config
+            curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /tmp/kubectl 
             curl -L https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.3.0/heptio-authenticator-aws_0.3.0_linux_amd64 -o /usr/local/bin/aws-iam-authenticator && chmod +x /usr/local/bin/aws-iam-authenticator
+            cat ~/.kube/config
+            mv /tmp/kubectl /usr/bin/kubectl && chmod +x /usr/bin/kubectl
             kubectl apply -f ./kubemanifest
   kube-delete:
     docker:
@@ -83,16 +85,16 @@ workflows:
   plan_approve_apply:
     jobs:
       - plan-apply
-      # - hold-apply:
-      #     type: approval
-      #     requires:
-      #       - plan-apply
-      # - apply:
-      #     requires:
-      #       - hold-apply
-      - kube-apply
-          #requires:
-          #  - apply
+       - hold-apply:
+           type: approval
+           requires:
+             - plan-apply
+       - apply:
+           requires:
+             - hold-apply
+      - kube-apply:
+          requires:
+            - apply
       - plan-destroy:
           requires:
             - kube-apply
