--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
             curl -L https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.3.0/heptio-authenticator-aws_0.3.0_linux_amd64 -o /usr/local/bin/aws-iam-authenticator && chmod +x /usr/local/bin/aws-iam-authenticator
             cat ~/.kube/config
             mv /tmp/kubectl /usr/bin/kubectl && chmod +x /usr/bin/kubectl
-            kubectl apply -f ./kubemanifest
+            kubectl apply -f ./kubemanifests
   kube-delete:
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
