ADDED: fix for installing helm

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,10 +67,10 @@ jobs:
             terraform output -raw kubeconfig>~/.kube/config
             curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /tmp/kubectl 
             curl -L https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.3.0/heptio-authenticator-aws_0.3.0_linux_amd64 -o /usr/local/bin/aws-iam-authenticator && chmod +x /usr/local/bin/aws-iam-authenticator
-            curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 && chmod 700 get_helm.sh
+            curl https://get.helm.sh/helm-v3.5.2-linux-amd64.tar.gz | tar xvz && mv linux-amd64/helm /usr/bin/helm && chmod +x /usr/bin/helm
             cat ~/.kube/config
             mv /tmp/kubectl /usr/bin/kubectl && chmod +x /usr/bin/kubectl 
-            ./get_helm.sh
+            
             helm install my-release nginx-stable/nginx-ingress
             kubectl apply -f ./kubemanifests
   kube-delete:
@@ -88,7 +88,7 @@ jobs:
             curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /tmp/kubectl 
             curl -L https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.3.0/heptio-authenticator-aws_0.3.0_linux_amd64 -o /usr/local/bin/aws-iam-authenticator && chmod +x /usr/local/bin/aws-iam-authenticator
             mv /tmp/kubectl /usr/bin/kubectl && chmod +x /usr/bin/kubectl  
-            
+
             kubectl delete -f ./kubemanifest
 workflows:
   version: 2
