MODIFY: New version and a fix for path

--- a/kubemanifests/stateless.yaml
+++ b/kubemanifests/stateless.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: stateless-app-container
-          image: bhaumikshukla/go-stateless
+          image: bhaumikshukla/go-stateless:v2
           ports:
             - containerPort: 8000
 ---
