--- a/kubemanifests/ingress.yaml
+++ b/kubemanifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     # use the shared ingress-nginx
     kubernetes.io/ingress.class: "nginx"
-    nginx.org/rewrites: "serviceName=stateful rewrite=/;serviceName=stateless rewrite=/$2"
+    nginx.org/rewrites: "serviceName=stateless rewrite=/;serviceName=stateful rewrite=/"
 spec:
   rules:
     - host: bhaumik.sre-workshop-2.nl
@@ -15,7 +15,7 @@ spec:
             backend:            
                 serviceName: "stateful"  
                 servicePort: 8080
-          - path: /stateless
+          - path: /stateless  
             backend:            
                 serviceName: "stateless"  
                 servicePort: 8000
